--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
   margin-left: 10px;
+  margin-bottom: 10px;
   flex: 0.8;
   border-radius: 10px;
   text-align: center;
@@ -89,29 +90,4 @@
   color: #005daa;
   float: left;
   margin: 2px 12px 2px 12px;
-}
-
-@media screen and (max-width: 960px) {
-  .sidebar {
-    /* display: flex;
-    flex-direction: column;
-    font-size: 10px; */
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 790px) {
-  .sidebar > h1 {
-    font-size: 10px;
-    margin-top: -100px;
-  }
-
-  .hero-container > p {
-    font-size: 30px;
-  }
-
-  .btn-mobile {
-    display: block;
-    text-decoration: none;
-  }
 }
