--- a/src/components/pages/ClubLeaders.css
+++ b/src/components/pages/ClubLeaders.css
@@ -18,3 +18,10 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+@media screen and (max-width: 820px) {
+  .clubleaders__contentbody {
+    flex-direction: column;
+    padding: 20px;
+  }
+}
