--- a/src/components/pages/ContactUs.css
+++ b/src/components/pages/ContactUs.css
@@ -1,10 +1,20 @@
-.contact {
-  /* background-color: #f3f2ef; */
+.contactus__contact {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
-.content__boby {
+.contactus__heading > h1 {
+  padding-left: 140px;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  color: #005daa !important;
+  text-align: left;
+}
+
+.contactus__contentbody {
   display: flex;
+  margin-top: 35px;
+  max-width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
