--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -9,3 +9,9 @@
   margin: 20px;
   max-width: 1200px;
 }
+
+@media screen and (max-width: 820px) {
+  .app__body {
+    flex-direction: column;
+  }
+}
