--- a/src/components/pages/Whatdoesrotarydo.css
+++ b/src/components/pages/Whatdoesrotarydo.css
@@ -1,9 +1,9 @@
-.Whatdoesrotarydo {
+/* .Kaimosirotaryserviceprojects__rotary {
   display: flex;
   flex-direction: column;
 }
 
-.headinhg__Watdoesrotarydo > h1 {
+.Kaimosirotaryserviceprojects__heading > h1 {
   padding-left: 140px;
   padding-top: 50px;
   padding-bottom: 10px;
@@ -11,7 +11,28 @@
   text-align: left;
 }
 
-.contentbody__Whatdoesrotarydo {
+.Kaimosirotaryserviceprojects__contentbody {
+  display: flex;
+  margin-top: 35px;
+  max-width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
+} */
+
+.Kaimosirotaryserviceprojects__rotary {
+  display: flex;
+  flex-direction: column;
+}
+
+.Kaimosirotaryserviceprojects__heading > h1 {
+  padding-left: 140px;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  color: #005daa !important;
+  text-align: left;
+}
+
+.Kaimosirotaryserviceprojects__contentbody {
   display: flex;
   margin-top: 35px;
   max-width: 1200px;
