--- a/src/components/pages/ContactUs.css
+++ b/src/components/pages/ContactUs.css
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-.contactus__contact {
-=======
-<<<<<<< HEAD
 .contactus__contact {
   display: flex;
   flex-direction: column;
@@ -21,10 +17,10 @@
   max-width: 1200px;
   margin-left: 20px;
   margin-right: 20px;
-=======
+}
+
 .contact {
   /* background-color: #f3f2ef; */
->>>>>>> 75092581f78fb7497b59c077c01af56b71ff23f5
   display: flex;
   flex-direction: column;
 }
@@ -39,12 +35,9 @@
 
 .contactus__contentbody {
   display: flex;
-<<<<<<< HEAD
+
   margin-top: 35px;
   max-width: 1200px;
   margin-left: 20px;
   margin-right: 20px;
-=======
->>>>>>> 67367879687a409480ec139f3c9f57d558bca8b8
->>>>>>> 75092581f78fb7497b59c077c01af56b71ff23f5
 }
