--- a/src/components/pages/WeareRotary.css
+++ b/src/components/pages/WeareRotary.css
@@ -10,7 +10,6 @@
   color: #005daa !important;
   text-align: left;
 }
-<<<<<<< HEAD
 .wearerotarycontent__body {
   display: flex;
 }
@@ -20,10 +19,9 @@
     flex-direction: column;
     padding: 20px;
   }
-=======
-<<<<<<< HEAD
-.wearerotarycontent__body {
-  display: flex;
+  .wearerotarycontent__body {
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 820px) {
@@ -31,14 +29,12 @@
     flex-direction: column;
     padding: 20px;
   }
-=======
 
-.wearerotarycontent__body {
-  display: flex;
-  margin-top: 35px;
-  max-width: 1200px;
-  margin-left: 20px;
-  margin-right: 20px;
->>>>>>> 67367879687a409480ec139f3c9f57d558bca8b8
->>>>>>> 75092581f78fb7497b59c077c01af56b71ff23f5
+  .wearerotarycontent__body {
+    display: flex;
+    margin-top: 35px;
+    max-width: 1200px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
