--- a/src/components/pages/Centercontentcontactus.css
+++ b/src/components/pages/Centercontentcontactus.css
@@ -1,46 +1,56 @@
-.form {
+.Centercontent__contactus {
+  background-color: white;
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+  padding: 30px;
+  height: 110vh;
+  margin: 10px;
+  flex: 0.8;
+}
+
+.form__contactus {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border: 2px solid green;
+  padding: 10px;
+  margin: 2px;
 }
 
-.form > h1 {
-  margin-bottom: 30px;
+.form__contactus > h1 {
+  margin-bottom: 3px;
 }
 
-.form > input,
+.form__contactus > input,
 textarea {
   padding: 20px;
   border-radius: 3px;
-  /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.137); */
   margin-bottom: 20px;
   border: 1px solid lightgray;
-  /* border: none; */
   background: #fff;
   font-size: 16px;
   color: rgb(0, 0, 32);
   outline: none;
 }
 
-.form > input:focus,
+.form__contactus > input:focus,
 textarea:focus {
   border: 1px solid rgb(0, 0, 196);
 }
 
-.form > textarea {
+.form__contactus > textarea {
   height: 150px;
   max-width: 400px;
   min-height: 100px;
 }
 
-.form > label {
+.form__contactus > label {
   padding-bottom: 10px;
   color: rgb(0, 0, 32);
   font-weight: bold;
 }
 
-.form > button {
+.form__contactus > button {
   padding: 20px;
   border: none;
   background-color: rgb(2, 2, 110);
@@ -53,6 +63,6 @@ textarea:focus {
   margin-top: 10px;
 }
 
-.form > button:hover {
-  background-color: rgb(0, 0, 196);
+.form__contactus > button:hover {
+  background-color: #0000c4;
 }
