--- a/src/components/pages/ContactUs.css
+++ b/src/components/pages/ContactUs.css
@@ -1,13 +1,14 @@
-.contactus__contact {
+.contactus {
   display: flex;
   flex-direction: column;
+  background-color: wheat;
 }
 
 .contactus__heading > h1 {
   padding-left: 140px;
   padding-top: 50px;
   padding-bottom: 10px;
-  color: #005daa !important;
+  color: #005daa;
   text-align: left;
 }
 
@@ -19,25 +20,16 @@
   margin-right: 20px;
 }
 
-.contact {
-  /* background-color: #f3f2ef; */
-  display: flex;
-  flex-direction: column;
-}
+@media screen and (max-width: 820px) {
+  .projectSelection__heading > h1 {
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    color: red !important;
+    text-align: left;
+  }
 
-.contactus__heading > h1 {
-  padding-left: 140px;
-  padding-top: 50px;
-  padding-bottom: 10px;
-  color: #005daa !important;
-  text-align: left;
-}
-
-.contactus__contentbody {
-  display: flex;
-
-  margin-top: 35px;
-  max-width: 1200px;
-  margin-left: 20px;
-  margin-right: 20px;
+  .projectSelection__contentbody {
+    flex-direction: column;
+  }
 }
