--- a/src/components/pages/Membership.css
+++ b/src/components/pages/Membership.css
@@ -1,58 +1,35 @@
-.form {
-  height: 100vh;
+.membership {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  background-color: wheat;
 }
 
-.form > h1 {
-  margin-bottom: 30px;
-}
-
-.form > input,
-textarea {
-  padding: 20px;
-  border-radius: 3px;
-  /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.137); */
-  margin-bottom: 20px;
-  border: 1px solid lightgray;
-  /* border: none; */
-  background: #fff;
-  font-size: 16px;
-  color: rgb(0, 0, 32);
-  outline: none;
-}
-
-.form > input:focus,
-textarea:focus {
-  border: 1px solid rgb(0, 0, 196);
-}
-
-.form > textarea {
-  height: 150px;
-  max-width: 400px;
-  min-height: 100px;
-}
-
-.form > label {
+.membership__heading > h1 {
+  padding-left: 140px;
+  padding-top: 50px;
   padding-bottom: 10px;
-  color: rgb(0, 0, 32);
-  font-weight: bold;
+  color: #005daa !important;
+  text-align: left;
 }
 
-.form > button {
-  padding: 20px;
-  border: none;
-  background-color: rgb(2, 2, 110);
-  font-weight: 500;
-  font-size: 20px;
-  border-radius: 3px;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-  margin-top: 10px;
+.membership__contentbody {
+  display: flex;
+  margin-top: 35px;
+  max-width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.form > button:hover {
-  background-color: #0000c4;
+@media screen and (max-width: 820px) {
+  .membership__heading > h1 {
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    color: red !important;
+    text-align: left;
+  }
+
+  .membership__contentbody {
+    flex-direction: column;
+  }
 }
