--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -24,7 +24,7 @@
   align-items: flex-start;
   margin: 16px;
   text-align: left;
-  width: 160px;
+  width: 250px;
   box-sizing: border-box;
 }
 
@@ -95,6 +95,26 @@
 .website-rights {
   color: #fff;
   margin-bottom: 16px;
+}
+
+.facebook > a {
+  color: white !important;
+  padding-right: 10px;
+}
+.youtube > a {
+  color: red !important;
+  padding-right: 10px;
+}
+.instagram > a {
+  color: violet !important;
+  padding-right: 10px;
+}
+.email > a {
+  color: orangered !important;
+  padding-right: 10px;
+}
+.twitter > a {
+  color: skyblue !important;
 }
 
 @media screen and (max-width: 820px) {
