getting the website ready for hosting on a custom domain

--- a/src/components/pages/ProjectSelection.css
+++ b/src/components/pages/ProjectSelection.css
@@ -1,6 +1,7 @@
 .projectSelection {
   display: flex;
   flex-direction: column;
+  background-color: wheat;
 }
 
 .projectSelection__heading > h1 {
