--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -1,8 +1,8 @@
 .app {
-  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: wheat;
 }
 .app__body {
   display: flex;
