--- a/src/components/pages/Sidebarcontentmembership.css
+++ b/src/components/pages/Sidebarcontentmembership.css
@@ -2,7 +2,7 @@
   flex: 0.2;
   text-align: left;
   height: fit-content;
-  padding-left: 10px;
+  padding-left: 100px;
 }
 
 .subpagesections__sidebarcontentmembership {
@@ -10,6 +10,18 @@
   padding: 10px;
   border-bottom: none;
 }
+
+.subpagesections__sidebarcontentmembership > img {
+  height: 200px;
+  width: 300px;
+  padding: 5px;
+  border-radius: 10px;
+  border: solid 1px green;
+  color: #005daa;
+  float: left;
+  margin: 2px 12px 2px 12px;
+}
+
 .subpagesections__sidebarcontentmembership > h2 {
   font-size: 35x;
 }
