--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,83 +1,82 @@
-.footer-container {
+.footer__container {
   background-color: #005daa;
   padding: 0 0 10.1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-left: 20px;
 }
 
-.footer-links {
+.footer__links {
   width: 100%;
   max-width: 1000px;
   display: flex;
   justify-content: center;
 }
 
-.footer-link-wrapper {
+.footerlink__wrapper {
   display: flex;
 }
 
-.footer-link-items {
+.footerlink__items {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: 16px;
   text-align: left;
-  width: 250px;
+  width: 200px;
   box-sizing: border-box;
 }
 
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
+.footerlink__items > h2 {
   color: sandybrown;
+  margin-bottom: 16px;
+  font-size: 14px;
 }
 
-.footer-link-items a {
+.footerlink__items a {
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
 
-.footer-link-items a:hover {
+.footerlink__items a:hover {
   color: sandybrown;
   transition: 0.3s ease-out;
 }
 
 /* Social Icons */
-.social-icon-link {
+.socialicon__link {
   color: #fff;
   font-size: 20px;
 }
-.social-icon-link :hover {
+.socialicon__link :hover {
   color: sandybrown;
 }
 
-.social-media {
+.social__media {
   max-width: 1000px;
   width: 100%;
 }
 
-.social-media-wrap {
+.socialmedia__wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 90%;
-  max-width: 1000px;
+  max-width: 800px;
   margin: 40px auto 0 auto;
 }
 
-.social-icons {
+.social__icons {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 240px;
 }
 
-.social-logo {
+.social__logo {
   color: #fff;
   justify-self: start;
   margin-left: 20px;
@@ -89,10 +88,10 @@
   margin-bottom: 16px;
 }
 
-.social-logo:hover {
+.social__logo:hover {
   color: sandybrown;
 }
-.website-rights {
+.website__rights {
   color: #fff;
   margin-bottom: 16px;
 }
@@ -118,23 +117,33 @@
 }
 
 @media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
+  .footer__container {
+    background-color: #005daa;
+    padding: 20px;
+  }
+  .footerlink__items > h2 {
+    font-size: 10px;
   }
 
-  .footer-input {
+  .footer__input {
     width: 100%;
   }
 
-  .btn {
-    width: 100%;
-  }
-
-  .footer-link-wrapper {
+  .footerlink__wrapper {
     flex-direction: column;
   }
 
-  .social-media-wrap {
+  .footerlink__items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 10px;
+    text-align: left;
+    width: 150px;
+    box-sizing: border-box;
+  }
+
+  .socialmedia__wrap {
     flex-direction: column;
   }
 }
