--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   z-index: 999;
 }
 
-.navbar-container {
+.navbar__container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +18,7 @@
   max-width: 1500px;
 }
 
-.navbar-logo {
+.navbar__logo {
   color: #fff;
   justify-self: start;
   margin-left: 2px;
@@ -29,7 +29,7 @@
   align-items: left;
 }
 
-.nav-menu {
+.nav__menu {
   display: grid;
   grid-template-columns: repeat(7, auto);
   grid-gap: 20px;
@@ -40,11 +40,11 @@
   margin-right: 2rem;
 }
 
-.nav-item {
+.nav__item {
   height: 30px;
 }
 
-.nav-links {
+.nav__links {
   color: #fff;
   display: flex;
   align-items: center;
@@ -53,7 +53,7 @@
   height: 100%;
 }
 
-.nav-links:hover {
+.nav__links:hover {
   border-bottom: 4px solid sandybrown;
   transition: all 0.2s ease-out;
 }
@@ -66,7 +66,7 @@
   display: none;
 }
 
-.menu-icon {
+.menu__icon {
   display: none;
 }
 
@@ -75,7 +75,7 @@
     position: relative;
   }
 
-  .nav-menu {
+  .nav__menu {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -87,7 +87,7 @@
     transition: all 0.5s ease;
   }
 
-  .nav-menu.active {
+  .nav__menu.active {
     background: #005daa;
     left: 0;
     opacity: 1;
@@ -95,27 +95,27 @@
     z-index: 1;
   }
 
-  .nav-links {
+  .nav__links {
     text-align: center;
     padding: 5px;
     width: 100%;
     display: table;
   }
 
-  .nav-links:hover {
+  .nav__links:hover {
     background-color: #fff;
     color: #242424;
     border-radius: 0;
   }
 
-  .navbar-logo {
+  .navbar__logo {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
   }
 
-  .menu-icon {
+  .menu__icon {
     display: block;
     position: absolute;
     top: 0;
@@ -153,23 +153,34 @@
 }
 
 @media screen and (max-width: 720px) {
+  .navbar {
+    background: #005daa;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
   .NavbarItems {
     position: relative;
   }
 
-  .nav-menu {
+  .nav__menu {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 50px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
   }
 
-  .nav-menu.active {
+  .nav__menu.active {
     background: #005daa;
     left: 0;
     opacity: 1;
@@ -177,33 +188,44 @@
     z-index: 1;
   }
 
-  .nav-links {
+  .nav__links {
     text-align: center;
     padding: 5px;
     width: 100%;
     display: table;
   }
 
-  .nav-links:hover {
+  .nav__links:hover {
     background-color: #fff;
     color: #242424;
     border-radius: 0;
   }
 
-  .navbar-logo {
-    position: absolute;
+  .navbar__logo {
+    /* position: absolute;
     top: 0;
     left: 0;
+    transform: translate(25%, 50%); */
+    color: #fff;
     transform: translate(25%, 50%);
+    left: 0;
+    position: absolute;
+    justify-self: start;
+    margin-left: 2px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 20px;
+    display: flex;
+    align-items: left;
   }
 
-  .menu-icon {
+  .menu__icon {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
-    font-size: 30px;
+    font-size: 20px;
     cursor: pointer;
   }
 
