--- a/src/components/pages/Centercontentmembership.css
+++ b/src/components/pages/Centercontentmembership.css
@@ -1,15 +1,15 @@
 .centercontent__membership {
-  background-color: white;
+  background-color: wheat;
   box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
   padding: 30px;
-  height: 330vh;
+  height: 240vh;
   margin: 10px;
   flex: 0.8;
 }
 
 .form {
-  height: 320vh !important;
-  padding: 20px;
+  height: 230vh !important;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,7 +28,7 @@ textarea {
   margin-bottom: 2px;
   border: 1px solid lightgray;
   /* border: none; */
-  background: #fff;
+  background: wheat;
   font-size: 12px;
   color: rgb(0, 0, 32);
   outline: none;
